# hamlit

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/hamlit/: E2_2022.json  E3_2023.json  E4_2024.json  __init__.py  cli.py  hamlit.py  hamlit_backup.py  requirements.txt
src/hamlit/temp/: E2_2022.json  E3_2023.json  E4_2024.json  hamlit.py
tests/: __init__.py  test_hamlit.py
