[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamlit"
version = "0.1.0"
description = "Ham Radio Tech license question pool tool and trainer."
readme = "README.rst"
authors = [
  {name = "Michael Kramer", email = "pickelmikel@gmail.com"}
]
maintainers = [
  {name = "Michael Kramer", email = "pickelmikel@gmail.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/pickelmikel/hamlit/issues"
changelog = "https://github.com/pickelmikel/hamlit/blob/master/changelog.md"
homepage = "https://github.com/pickelmikel/hamlit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

